fix: wrap table in box with min height and change styling

--- a/src/app/messages/messages.module.css
+++ b/src/app/messages/messages.module.css
@@ -111,7 +111,6 @@
 .pageControls {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
   gap: 10px;
 }
 
